# arboractive-report-generator

./: .gitignore  README.md  install.bat  install.ps1  install.sh  pyproject.toml
arboractive/: __init__.py  __main__.py  classify.py  cli.py  gui.py  models.py  parse.py  pipeline.py  render.py  thresholds.py
tests/: _fixtures.py  test_classify.py  test_classify_toxics.py  test_determinism.py  test_gui.py  test_parse.py  test_pipeline.py  test_render.py  test_thresholds.py
