[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arboractive"
version = "0.1.0"
description = "Deterministic UConn soil lab PDF → ArborActive branded HTML report"
requires-python = ">=3.11"
dependencies = [
    "pdfplumber>=0.10",
    "weasyprint>=60",
]

[project.scripts]
arboractive = "arboractive.cli:main"

[tool.setuptools.packages.find]
include = ["arboractive*"]

[tool.setuptools.package-data]
arboractive = ["assets/*.png"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E", "F", "W",    # pycodestyle, pyflakes
    "I",              # isort
    "B",              # bugbear
    "UP",             # pyupgrade
    "SIM",            # flake8-simplify
    "RUF",            # ruff-specific
]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pdfplumber", "pdfplumber.*", "weasyprint", "weasyprint.*"]
ignore_missing_imports = true

[tool.pylint.main]
py-version = "3.11"

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "line-too-long",                     # handled by black
    "fixme",
    "too-many-return-statements",        # natural for the tier-classifier dispatch
    "too-many-locals",                   # natural for the CLI main entry point
    "too-many-branches",                 # natural for the CLI main entry point
    "too-many-instance-attributes",      # natural for data-record dataclasses
]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
